added dynamic assemply of content depending on passed variable via url

--- a/frontend/views/partials/footer.ejs
+++ b/frontend/views/partials/footer.ejs
@@ -2,7 +2,13 @@
     <ul>
         <li>something</li>
         <li>
+            <a href="/home">Home</a>
+        </li>
+        <li>
             <a href="/about">About</a>
+        </li>
+        <li>
+            <a href="/dynamic_page">Dynamic_Page</a>
         </li>
         <li>something</li>
     </ul>
