refactor code, misc

--- a/frontend/views/about.ejs
+++ b/frontend/views/about.ejs
@@ -2,16 +2,12 @@
 <html>
 <body>
 
-<header>
-  <%- include('partials/header'); %>
-</header>
+<%- include('partials/header'); %><!-- ejs inserts header -->
 
 <h1>About Page</h1>
 <p>hello world</p>
 
-<footer>
-  <%- include('partials/footer'); %>
-</footer>
+<%- include('partials/footer'); %><!-- ejs inserts footer -->
 
 </body>
 </html>
