--- a/frontend/views/dynamic_page.ejs
+++ b/frontend/views/dynamic_page.ejs
@@ -2,8 +2,7 @@
 <html>
 <body>
 
-<!-- ejs inserts header -->
-<%- include('partials/header'); %>
+<%- include('partials/header'); %><!-- ejs inserts header -->
 
 <h1>Dynamic Page</h1>
 
@@ -12,8 +11,7 @@
     <%- include(content_path); %>
 </div>
 
-<!-- ejs inserts footer -->
-<%- include('partials/footer'); %>
+<%- include('partials/footer'); %><!-- ejs inserts footer -->
 
 </body>
 </html>
