added head part, with adjustable title upon html generation

--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -1,9 +1,8 @@
 <header>
-    <ul>
-        <li>something</li>
-        <li>
-            <a href="/about">About</a>
-        </li>
-        <li>something</li>
-    </ul>
+    <div class="header">
+        <a href="/" class="logo">
+            Site Logo<!-- todo insert image -->
+        </a>
+    </div>
+    <!-- todo back button -->
 </header>
