--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -2,6 +2,8 @@
 <html>
 <body>
 
+<%- include('partials/head'); %><!-- ejs inserts head -->
+
 <%- include('partials/header'); %><!-- ejs inserts header -->
 
 <h1>Home Page</h1>
