--- a/frontend/views/partials/footer.ejs
+++ b/frontend/views/partials/footer.ejs
@@ -1,15 +1,17 @@
 <footer>
+    <h2>Site Map</h2>
     <ul>
-        <li>something</li>
+        <li>
+            <a href="/">/</a>
+        </li>
         <li>
             <a href="/home">Home</a>
         </li>
         <li>
-            <a href="/about">About</a>
-        </li>
-        <li>
             <a href="/dynamic_page">Dynamic_Page</a>
         </li>
-        <li>something</li>
+        <li>
+            <a href="/about">About</a>
+        </li>
     </ul>
 </footer>
