--- a/frontend/views/partials/head.ejs
+++ b/frontend/views/partials/head.ejs
@@ -1,4 +1,5 @@
 <head>
     <meta charset="UTF-8">
     <title><%= title %></title><!-- ejs inserts passed parameter - tittle -->
+    <link rel="stylesheet" href="/styles/global_styles.css">
 </head>
