added knapsack alg draft, page. added code viewer part

--- a/frontend/views/partials/footer.ejs
+++ b/frontend/views/partials/footer.ejs
@@ -8,6 +8,9 @@
             <a href="/home">Home</a>
         </li>
         <li>
+            <a href="/knapsack_page">Knapsack_Page</a>
+        </li>
+        <li>
             <a href="/dynamic_page">Dynamic_Page</a>
         </li>
         <li>
