--- a/frontend/views/partials/head.ejs
+++ b/frontend/views/partials/head.ejs
@@ -2,4 +2,7 @@
     <meta charset="UTF-8">
     <title><%= title %></title><!-- ejs inserts passed parameter - tittle -->
     <link rel="stylesheet" href="/styles/global_styles.css">
+    <%- stylesheets_list %>
+    <!-- DEBUG: <%= title %> -->
+    <!-- DEBUG: <%- stylesheets_list %> -->
 </head>
