--- a/frontend/public/styles/knapsack_styles.css
+++ b/frontend/public/styles/knapsack_styles.css
@@ -1,4 +1,121 @@
-/* body tag */
+/* tag */
+/* .class */
+/* #id */
+
 body {
-    background-color: #72f308;
+    font-family: Arial, sans-serif;
+}
+
+/* ---------------- code_viewer ---------------- */
+
+#code-viewer {
+    min-width: 10vw;
+    min-height: 20vh;
+
+    max-width: 45vw;
+    max-height: 90vh;
+
+    position: fixed;
+    top: 2vh;
+    right: 0;
+
+    background-color: #9fb9b8;
+    border: 1px solid #ccc;
+    padding: 15px;
+
+    transform: translateX(100%);
+    transition: transform 500ms;
+}
+#code-viewer.show {
+    transform: translateX(0);
+    transition: transform 250ms;
+}
+
+#cv-show-btn {
+
+    bottom: 20px;
+    right: 20px;
+
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+#cv-show-btn:hover {
+    background-color: #0056b3;
+}
+
+#cv-close-btn {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    padding: 5px 10px;
+
+    background-color: #f44336;
+    color: white;
+    border: none;
+
+    cursor: pointer;
+
+}
+#cv-close-btn:hover {
+    background-color: #d32f2f;
+}
+
+/* ---------------- table_viewer ---------------- */
+
+#table-viewer {
+    min-width: 10vw;
+    min-height: 20vh;
+
+    max-width: 100vw;
+    max-height: 30vh;
+
+    position: fixed;
+    left: 0;
+    bottom: 0;
+
+    background-color: #9fb9b8;
+    border: 1px solid #ccc;
+    padding: 15px;
+
+    transform: translateY(100%);
+    transition: transform 500ms;
+}
+#table-viewer.show {
+    transform: translateY(0);
+    transition: transform 250ms;
+}
+
+#tv-show-btn {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+#tv-show-btn:hover {
+    background-color: #0056b3;
+}
+
+#tv-close-btn {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    padding: 5px 10px;
+
+    background-color: #f44336;
+    color: white;
+    border: none;
+
+    cursor: pointer;
+
+}
+#tv-close-btn:hover {
+    background-color: #d32f2f;
 }
