--- a/frontend/views/partials/table_viewer.ejs
+++ b/frontend/views/partials/table_viewer.ejs
@@ -7,6 +7,6 @@
         <button id="tv-close-btn" onclick="closeTableViewer()">
             X
         </button>
-        <%- table_content %>
+        <div class="tv-grid" id="tv-grid"></div>
     </div>
 </div>
